# agentic-notify

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml
adapters/: index.html
agentic_notify/: __init__.py  orchestrator.py
agentic_notify/adapters/: __init__.py  base.py  mcp.py  mock_reminder.py  notes.py  webhook.py
agentic_notify/examples/: __init__.py  app.py
agentic_notify/handlers/: __init__.py  approval.py  base.py
agentic_notify/integrations/: __init__.py  base.py  fastapi_integration.py  queue.py
agentic_notify/observability/: __init__.py  logger.py
agentic_notify/planning/: __init__.py  openai_client.py  planner.py  prompts.py
agentic_notify/policies/: __init__.py  engine.py
agentic_notify/routing/: __init__.py  engine.py
agentic_notify/schemas/: __init__.py  notification.py  result.py  workflow.py
agentic_notify/storage/: __init__.py  base.py  memory.py  postgres.py
agentic_notify/tools/: __init__.py  registry.py
agentic_notify/workflows/: __init__.py  engine.py
api/: index.html
architecture/: index.html
docs/: adapters.md  api.md  architecture.md  index.md
examples/: e2e_sample.py  feature_test.py
examples/react_native_bridge/: App.tsx  package.json
search/: search_index.json
tests/: test_basic.py  test_planner.py  test_run.py
